Switch to minimal JVM.